5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1585_1446.log
== TEST (2019-03-21 11:58:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

ppl = float(input("quantos litros foram comprados?: "))
 valor = ppl * (1/3)
	print(round(valor, 4))
-- ERROR:
File "XXXX", line 6
    valor = ppl * (1/3)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

ppl = float(input("quantos litros foram comprados?: "))
 valor = ppl * ( 1 / 3 )
	print(round(valor, 4))
-- ERROR:
File "XXXX", line 6
    valor = ppl * ( 1 / 3 )
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

ppl = float(input("quantos litros foram comprados?: "))
valor = ppl * ( 1 / 3 )
	print(round(valor, 4))
-- ERROR:
File "XXXX", line 7
    print(round(valor, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:59:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

ppl = float(input("quantos litros foram comprados?: "))
valor = ppl * ( 1 / 3 )
print(round(valor, 4))
-- OUTPUT:
2.3333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:59:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

ppl = float(input("quantos litros foram comprados?: "))
valor = ppl * ( 1 / 3 )
print(round(valor, 4))
-- EXECUTION TIME:
0.14237
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.3333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.6667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:59:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

ppl = float(input("quantos litros foram comprados?: "))
valor = ppl * ( 1 / 3 )
print(round(valor, 3))
-- EXECUTION TIME:
0.151872
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
